--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@ body {
 }
 
 @media (max-width: 767px) {
+    /* Animations  */
     .slide-in {
         animation: slideIn 0.4s forwards;
     }
@@ -158,4 +159,32 @@ body {
     .slide-out {
         animation: slideOut 0.4s forwards;
     }
+}
+
+@keyframes rotateClockWise {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.rotate-clock-wise {
+    animation: rotateClockWise 0.3s linear;
+}
+
+@keyframes rotateAnitClockWise {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(-120deg);
+    }
+}
+
+.rotate-anti-clock-wise {
+    animation: rotateAnitClockWise 0.4s linear;
 }
